docs: update document